--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.6",
+    "sanitize-html": "^2.11.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
